# object_detector-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile
.github/workflows/: ci.yml
assets/: expected_outputs.json
benches/: predict_benchmark.rs
examples/: basic_use.rs  export_outputs.rs  export_regression_outputs.rs  prompt_free_basic.rs  promptable_basic.rs  promptable_visualize.rs  verify_clip_parity.rs  visualize.rs  visualize_2.rs
py-yolo/: export_onnx.py  export_onnx_unified.py  main.py  pyproject.toml  run_onnx.py  run_yolo.py
py-yolo/pf/: export_onnx.py
py-yolo/text_prompt/: diag_compare_outputs.py  diag_export_clip_reference.py  diag_nms_sweep.py  export_prompt_onnx_with_clip.py  onnx_basic.py  onnx_visual.py  onnx_visual_clip.py  ref_img_tensor.npy  ref_text_pe.npy
src/: error.rs  lib.rs  main.rs  model_manager.rs  object_detector.rs  structs.rs  try1.rs  try2.rs
src/predictor/: mod.rs  nms.rs  object_detector.rs  processing.rs  prompt_free_detector.rs  promptable.rs  promptable_detector.rs  yolo_predictor.rs
tests/: detector_test.rs  regression.rs
