[project]
name = "py-yolo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.33",
    "ftfy>=6.3.1",
    "regex>=2026.3.32",
    "wcwidth>=0.6.0",
    "colorama>=0.4.6",
    "tqdm>=4.67.3",
    "clip",
    "onnxruntime>=1.24.4",
]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
